refactor: 방어적 복사 방법 수정